# derivative-calculator

./: README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
src/derivative_calculator/: interface.py  interpreter.py  math_parser.py  symb_diff_tool.py  tokenizer.py  utils.py
tests/: test_derivative_calculator.py
