[metadata]
name = derivative-calculator
description = derivative calculator
author = Santiago Cuenca
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10

[options]
packages =
    derivative_calculator
python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.2.1
    pytest-cov>=4.0.0
    mypy>=0.991
    flake8>=6.0.0
    tox>=4.4.2


[flake8]
max-line-length = 92
